--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!-- Open Graph Tags (For Facebook, LinkedIn) -->
 <meta property="og:title" content="Halish Richard J - Machine Mentor">
 <meta property="og:description" content="Experienced Machine Mentor guiding students and professionals in machine learning and AI with practical, hands-on mentorship.">
-<meta property="og:image" content="URL_to_your_image">
-<meta property="og:url" content="https://yourwebsite.com">
+<meta property="og:image" content="https://halishrichard-portfolio.web.app/assets/mylogo-CH6JsPgT.png">
+<meta property="og:url" content="https://halishrichard-portfolio.web.app/">
 <meta property="og:type" content="website">
 <!-- Page Title -->
 <title>Halish Richard J - Machine Mentor</title>
@@ -39,7 +39,6 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Halish Richard J - Machine Mentor">
 <meta name="twitter:description" content="Get guidance from Halish Richard J, an experienced Machine Learning Mentor with a passion for AI and data science.">
-<meta name="twitter:image" content="URL_to_your_image">
 
    
   </head>
